force-app/main/default/objects/SurveyQuestionResponse__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <formula>CASE(Response_Picklist_for_Reporting__c, 
&quot;Strongly Agree&quot;, 1,
&quot;Agree&quot;, 1,
&quot;Yes&quot;, 1,
NULL)</formula>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>