force-app/main/default/objects/SurveyQuestionResponse__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <formula>CASE(Response_Picklist_for_Reporting__c, 
&quot;1&quot;, -1,
&quot;2&quot;, -1,
&quot;3&quot;, -1,
&quot;4&quot;, 0,
&quot;5&quot;, 1,
NULL)</formula>
    <label>NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>