force-app/main/default/objects/SurveyQuestionResponse__c/validationRules/Allow_Only_Hours_to_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_Only_Hours_to_be_entered</fullName>
    <active>true</active>
    <description>User need to enter only hours(number) while answering Approximately how many total hours did it take you to resolve this case?</description>
    <errorConditionFormula>Survey_Question__r.Name  =&apos;Approximately how many total hours did it take you to resolve this case?&apos; &amp;&amp;  not(ISNUMBER(Response__c )) &amp;&amp; Response__c !=&apos;&apos;</errorConditionFormula>
    <errorMessage>User need to enter only hours(number) while answering this question - Approximately how many total hours did it take you to resolve this case?</errorMessage>
</ValidationRule>