force-app/main/default/objects/SurveyQuestionResponse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response__c</columns>
    <columns>Response_Picklist_for_Reporting__c</columns>
    <columns>Survey_Question__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NPS__c</columns>
    <columns>CSAT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>