force-app/main/default/objects/SurveyQuestionResponse__c/listViews/Customer.listView-meta.xml
<ListView>
    <fullName>Customer</fullName>
    <columns>NAME</columns>
    <columns>Response__c</columns>
    <columns>Response_Picklist_for_Reporting__c</columns>
    <columns>Survey_Question__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Question__c</field>
        <operation>contains</operation>
        <value>Customer Service Center follow up with</value>
    </filters>
    <filters>
        <field>Response_Picklist_for_Reporting__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Customer Service Center follow up with</label>
</ListView>